1. config i18n split to ds